  * Support multiple simultaneous network connections to haret.  This
    can be invoked by calling the new "network <port>" haret command.
    Having multiple telnet windows can be useful when using haret to
    invoke a wince action while simultaneously tracing the results.
    Warning - most of haret is not thread-safe, so care should be
    taken to not run intricate commands simultaneously.

  * Add new commands: LOG, UNLOG, PS, KILL, LOADLIBRARYEX, NLEDSET,
    LSMOD, POWERMON

  * Removed support for command-line options "-r" and "-k".  These
    options are superseded by the linload.exe program and the command
    "KILL".  This was done, in part, because the "-k" option required
    toolhelp.dll which may not be present on old PDAs.

20061118 0.4.4 <kevin@koconnor.net>

  * Add ability to bind haret, kernel, and initrd into a single exe.
    This is done by running:

    make linload CMDLINE="xx" KERNEL=zImage INITRD=abc

    A file out/linload.exe will be created.  Running this on a pda
    will launch the specified kernel.  This feature may be useful for
    building linux installation kits in an easy to run application.

  * New linux bootloading code.  This new code now does most of the
    actions from C code.  This allows more diagnostic utilities (eg,
    now lines are written to the framebuffer from the preloader).
    Note that the penguin logo was disabled in this release.  (A
    simple progress bar was added in its place.)

  * Reenabled support for detection of framebuffer via gx.dll calls
    (eg, GXOpenDisplay).  This is done via the late library loading
    code.

20061115 0.4.3 <kevin@koconnor.net>

  * Add pxa specific interrupt watching code.  This allows one to
    trace interrupts, trace memory access, and set instruction
    breakpoints.  This command is only available when haret is run on
    a pxa processor.

  * Add the ability to bind functions to dlls at runtime instead of at