@@ -1,0 +1,13 @@
+#include "arch-sa.h"
+
+MachineSA::MachineSA()
+{
+    name = "Generic Intel StrongArm";
+}
+
+int
+MachineSA::detect()
+{
+    // TODO - need to implement detection system.
+    return 0;
+}
